add some JavaInstruction objects, which is come from Java Instraction, to the JavaInstructionTable

--- a/doc/diary/01/01.md
+++ b/doc/diary/01/01.md
@@ -20,3 +20,14 @@ Java指令==>执行引擎==>机器码
 
 其中，EnumJavaOpCode枚举所有的Java指令集对应的操作码
 
+然后，再设计一个抽象执行器和本地方法执行器，本地方法执行器用于用C#.net编写的方法来执行Java指令
+
+![](.\ExecutorUML.PNG)
+
+编写单元测试验证其过程
+
+![](.\Execute_Test.PNG)
+
+git的版本: 70babe029e04c89d29cd1ac56ddabb80cfc85087
+
+git: https://github.com/firewood001/JXCSVM4J
